src/objects/Territory_of_Sale__mdt.object
<CustomObject>
    <fields>
        <fullName>Conditional_Language__c</fullName>
        <label>Conditional Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Header__c</fullName>
        <label>Consulting Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Total_Header__c</fullName>
        <label>Consulting Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Header__c</fullName>
        <label>Description Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Header__c</fullName>
        <label>Education Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Total_Header__c</fullName>
        <label>Education Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Header__c</fullName>
        <label>End Date Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Total_Header__c</fullName>
        <label>Est Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type_Header__c</fullName>
        <label>License Type Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Hourly_Rate_Header__c</fullName>
        <label>List Hourly Rate Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_Header__c</fullName>
        <label>List Price Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Header__c</fullName>
        <label>Maintenance Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Hourly_Rate_Header__c</fullName>
        <label>Net Hourly Rate Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price_Header__c</fullName>
        <label>Net Price Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_time_Transaction_Incentive_Header__c</fullName>
        <label>One time Transaction Incentive Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Grand_Total_Header__c</fullName>
        <label>Order Grand Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Subtotal_Header__c</fullName>
        <label>Order Subtotal Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Consulting_Header__c</fullName>
        <label>Other Consulting Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Support_Total_Header__c</fullName>
        <label>Premium Support Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Header__c</fullName>
        <label>Price Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Header__c</fullName>
        <label>Quantity Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Total_Header__c</fullName>
        <label>Software Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Support_Total_Header__c</fullName>
        <label>Standard Support Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Header__c</fullName>
        <label>Start Date Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal_Header__c</fullName>
        <label>Subtotal Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Header__c</fullName>
        <label>Support Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Header__c</fullName>
        <label>Term Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Header__c</fullName>
        <label>Total Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>language_code__c</fullName>
        <label>language code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <default>true</default>
                    <label>zh_CN</label>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory of Sale</label>
    <pluralLabel>Territory of Sale</pluralLabel>
</CustomObject>